# fine-tunning-rag

./: .gitignore  README.md  especificacao1.md  main.py  pyproject.toml
cli_app/: main.py
core/: __init__.py
core/application/: __init__.py
core/application/use_cases/: create_item_uc.py  extract_news_content_usecase.py  generate_summaries_usecase.py  prepare_training_data_usecase.py  scrape_news_links_usecase.py
core/domain/: __init__.py
core/domain/entities/: item.py  news_article.py  training_example.py
core/domain/repositories/: __init__.py  cnn_scraping_repository.py  item_repo.py  json_news_repository.py  open_ai_repository.py
core/domain/repositories/abstracts/: abstract_ai_repository.py  abstract_new_repository.py  abstract_scraping_repository.py
core/infrastructure/: __init__.py
core/infrastructure/repositories/: __init__.py  in_memory_item_repo.py
docs/: NotaAula1.ipynb  especificacao1.md
http_app/: main.py
tests/cli_app/: __init__.py
tests/core/: test_use_cases.py
tests/http_app/: __init__.py
